--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 									<p>I blend hustle, heart, and imagination into everything I do. Equal parts workhorse and idea machine, I bring good vibes, fresh thinking, and just enough humor to keep the team smiling (and on schedule).</p>
 								</div>
 								<div class="about_btn">
-									<a href="https://drive.google.com/file/d/1Ol1Fnpt89ioKDsmJjIEili-PheoYmHl-/view?usp=sharing" class="awilo_fn_main_button">
+									<a href="https://drive.google.com/file/d/1sAbhyr-ynQUnOtsRitMtTOp0DJKcdyyg/view?usp=drive_link" class="awilo_fn_main_button">
 										<span>Download CV</span>
 										<span>Download CV</span>
 									</a>
@@ -771,4 +771,5 @@
 <!-- /SCRIPTS -->
 
 </body>
+
 </html>
