--- a/index.html
+++ b/index.html
@@ -303,11 +303,11 @@
 									<div class="title_abs"><div class="layer" data-depth="0.3"></div></div>
 									<div class="title_cat">
 										<p>
-											<a href="https://ovrdsewebd.github.io/designportfolio2/" class="awilo_fn_circle_link">Visit Website</a>
+											<a href="https://ovrdsewebd.github.io/designportfolio2/" rel="noopener noreferrer" class="awilo_fn_circle_link">Visit Website</a>
 										</p>
 									</div>
 									<div class="title_name">
-										<h3><a href="https://ovrdsewebd.github.io/designportfolio2/">Design Portfolio</a></h3>
+										<h3><a href="https://ovrdsewebd.github.io/designportfolio2/" rel="noopener noreferrer">Design Portfolio</a></h3>
 									</div>
 								</div>
 							</div>
@@ -773,3 +773,4 @@
 </body>
 
 </html>
+
