--- a/index.html
+++ b/index.html
@@ -288,30 +288,40 @@
 				<div class="awilo_fn_portfolio_grid"> 	
 					<ul class="awilo_fn_masonry">
 						<li class="grid-sizer"></li>
-						<li class="awilo_fn_masonry_in tmwide66">
-							<div class="list_item">
 
-								<div class="img_holder">
-									<img src="img/thumb/thumb-420-420.jpg" alt="" />
-									<div class="awilo_fn_abs_img">
-                                    <video class="autoplay-video" autoplay muted loop playsinline>
-                                    <source src="img/portfolio/1.mp4" type="video/mp4">
-                                    </video>
-                                </div>
-								
-								<div class="title_holder">
-									<div class="title_abs"><div class="layer" data-depth="0.3"></div></div>
-									<div class="title_cat">
-										<p>
-											<a href="https://ovrdsewebd.github.io/designportfolio2/" class="awilo_fn_circle_link">Visit Website</a>
-										</p>
-									</div>
-									<div class="title_name">
-										<h3><a href="https://ovrdsewebd.github.io/designportfolio2/">Design Portfolio</a></h3>
-									</div>
-								</div>
-							</div>
-						</li>
+						<li class="awilo_fn_masonry_in tmwide66">
+  <a href="https://ovrdsewebd.github.io/designportfolio2/" 
+     target="_blank" 
+     rel="noopener noreferrer"
+     class="list_item">
+
+    <div class="img_holder">
+      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <div class="awilo_fn_abs_img">
+        <video class="autoplay-video" autoplay muted loop playsinline>
+          <source src="img/portfolio/1.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+
+    <div class="title_holder">
+      <div class="title_abs">
+        <div class="layer" data-depth="0.3"></div>
+      </div>
+
+      <div class="title_cat">
+        <p>
+          <span class="awilo_fn_circle_link">Visit Website</span>
+        </p>
+      </div>
+
+      <div class="title_name">
+        <h3>Design Portfolio</h3>
+      </div>
+    </div>
+
+  </a>
+</li>
 						<li class="awilo_fn_masonry_in">
 							<div class="list_item">
 								 
@@ -771,4 +781,5 @@
 <!-- /SCRIPTS -->
 
 </body>
+
 </html>
