--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div class="r_inner" id="scene">
 								<div class="layer about_img" data-depth="0.5">
 									<img src="img/thumb/thumb-600-700.jpg" alt="" />
-									<div class="awilo_fn_abs_img" data-bg-img="img/mark.jpg"></div>
+									<div class="awilo_fn_abs_img" data-bg-img="./img/mark.jpg"></div>
 								</div>
 								<div class="layer about_border" data-depth="0.3">
 									<img src="img/thumb/thumb-600-700.jpg" alt="" />
@@ -296,10 +296,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video class="autoplay-video" autoplay muted loop playsinline>
-          <source src="img/portfolio/1.mp4" type="video/mp4">
+          <source src="./img/portfolio/1.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -330,10 +330,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video muted playsinline>
-          <source src="img/portfolio/5.mp4" type="video/mp4">
+          <source src="./img/portfolio/5.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -360,10 +360,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video muted playsinline>
-          <source src="img/portfolio/4.mp4" type="video/mp4">
+          <source src="./img/portfolio/4.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -390,10 +390,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video muted playsinline>
-          <source src="img/portfolio/6.mp4" type="video/mp4">
+          <source src="./img/portfolio/6.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -420,10 +420,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video muted playsinline>
-          <source src="img/portfolio/2.mp4" type="video/mp4">
+          <source src="./img/portfolio/2.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -450,10 +450,10 @@
      class="list_item">
 
     <div class="img_holder">
-      <img src="img/thumb/thumb-420-420.jpg" alt="" />
+      <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
         <video muted playsinline>
-          <source src="img/portfolio/3.mp4" type="video/mp4">
+          <source src="./img/portfolio/3.mp4" type="video/mp4">
         </video>
       </div>
     </div>
@@ -549,12 +549,12 @@
 								<div class="swiper-slide">
 									<div class="r_item">
 										<div class="r_item_in">
-											<div class="r_quote"><img class="awilo_fn_svg" src="img/svg/quote.svg" alt="" /></div>
+											<div class="r_quote"><img class="awilo_fn_svg" src="./img/svg/quote.svg" alt="" /></div>
 											<div class="r_review">
 												<div class="awilo_fn_review" data-stars="4">
 													<div class="review_in">
-														<div class="rating_absolute"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
-														<div class="rating_relative"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
+														<div class="rating_absolute"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
+														<div class="rating_relative"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
 													</div>
 												</div>
 											</div>
@@ -562,7 +562,7 @@
 												<p>Working with Mark was a fantastic experience. He took our ideas and turned them into a website that’s not only visually stunning but also incredibly user-friendly. Communication was clear, deadlines were met, and they went above and beyond to ensure every detail was perfect. Our team couldn’t be happier with the final result!</p>
 											</div>
 											<div class="r_reviewer">
-												<div class="abs_img" data-bg-img="img/clients/1.jpg"></div>
+												<div class="abs_img" data-bg-img="./img/clients/1.jpg"></div>
 												<div class="title_holder">
 													<h3>Miggs</h3>
 													<h5>CEO of MIGGS MEDIA LLC</h5>
@@ -580,8 +580,8 @@
 											<div class="r_review">
 												<div class="awilo_fn_review" data-stars="4">
 													<div class="review_in">
-														<div class="rating_absolute"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
-														<div class="rating_relative"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
+														<div class="rating_absolute"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
+														<div class="rating_relative"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
 													</div>
 												</div>
 											</div>
@@ -589,7 +589,7 @@
 												<p>Mark was an exceptional intern and I'm glad we took him on for this project. Most students aren't able to work as independently and consistently as he has, which he should be extremely proud of. And I've worked with dozens of interns over my time, while only a few matched his ability to work with minimal oversight.  I'm a pretty strict marker and 96% is much higher than I'd typically give just because of his impeccable soft skills</p>
 											</div>
 											<div class="r_reviewer">
-												<div class="abs_img" data-bg-img="img/clients/2.jpg"></div>
+												<div class="abs_img" data-bg-img="./img/clients/2.jpg"></div>
 												<div class="title_holder">
 													<h3>Uzair Hasan</h3>
 													<h5>Owner of Esports How</h5>
@@ -603,12 +603,12 @@
 								<div class="swiper-slide">
 									<div class="r_item">
 										<div class="r_item_in">
-											<div class="r_quote"><img class="awilo_fn_svg" src="img/svg/quote.svg" alt="" /></div>
+											<div class="r_quote"><img class="awilo_fn_svg" src="./img/svg/quote.svg" alt="" /></div>
 											<div class="r_review">
 												<div class="awilo_fn_review" data-stars="4">
 													<div class="review_in">
-														<div class="rating_absolute"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
-														<div class="rating_relative"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
+														<div class="rating_absolute"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
+														<div class="rating_relative"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
 													</div>
 												</div>
 											</div>
@@ -616,7 +616,7 @@
 												<p>Mark brings creativity and attention to detail to every project. He doesn’t just get things done; he improves them along the way. He is good at solving problems, stays professional, and adapts quickly when things change. He consistently goes above what is expected and helps raise the quality of work around him.</p>
 											</div>
 											<div class="r_reviewer">
-												<div class="abs_img" data-bg-img="img/clients/4.jpg"></div>
+												<div class="abs_img" data-bg-img="./img/clients/4.jpg"></div>
 												<div class="title_holder">
 													<h3>Jess Klombies</h3>
 													<h5>Design Services Manager at Renoworks Software</h5>
@@ -630,12 +630,12 @@
 								<div class="swiper-slide">
 									<div class="r_item">
 										<div class="r_item_in">
-											<div class="r_quote"><img class="awilo_fn_svg" src="img/svg/quote.svg" alt="" /></div>
+											<div class="r_quote"><img class="awilo_fn_svg" src="./img/svg/quote.svg" alt="" /></div>
 											<div class="r_review">
 												<div class="awilo_fn_review" data-stars="4">
 													<div class="review_in">
-														<div class="rating_absolute"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
-														<div class="rating_relative"><img class="awilo_fn_svg" src="img/svg/stars.svg" alt="" /></div>
+														<div class="rating_absolute"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
+														<div class="rating_relative"><img class="awilo_fn_svg" src="./img/svg/stars.svg" alt="" /></div>
 													</div>
 												</div>
 											</div>
@@ -643,7 +643,7 @@
 												<p>Mark does excellent work and pays attention to the details that matter. He solves problems effectively, keeps a professional attitude, and adapts quickly when needed. His work consistently meets and often exceeds expectations</p>
 											</div>
 											<div class="r_reviewer">
-												<div class="abs_img" data-bg-img="img/clients/4.jpg"></div>
+												<div class="abs_img" data-bg-img="./img/clients/4.jpg"></div>
 												<div class="title_holder">
 													<h3>Franni Obispo</h3>
 													<h5>Design Services Manager at Renoworks Software</h5>
@@ -814,4 +814,5 @@
 </body>
 
 </html>
+
 
