--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     <div class="img_holder">
       <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
-        <video muted playsinline>
+        <video autoplay muted loop playsinline preload="auto">
           <source src="./img/portfolio/5.mp4" type="video/mp4">
         </video>
       </div>
@@ -362,7 +362,7 @@
     <div class="img_holder">
       <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
-        <video muted playsinline>
+        <video autoplay muted loop playsinline preload="auto">
           <source src="./img/portfolio/4.mp4" type="video/mp4">
         </video>
       </div>
@@ -392,7 +392,7 @@
     <div class="img_holder">
       <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
-        <video muted playsinline>
+        <video autoplay muted loop playsinline preload="auto">
           <source src="./img/portfolio/6.mp4" type="video/mp4">
         </video>
       </div>
@@ -422,7 +422,7 @@
     <div class="img_holder">
       <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
-        <video muted playsinline>
+        <video autoplay muted loop playsinline preload="auto">
           <source src="./img/portfolio/2.mp4" type="video/mp4">
         </video>
       </div>
@@ -452,7 +452,7 @@
     <div class="img_holder">
       <img src="./img/thumb/thumb-420-420.jpg" alt="" />
       <div class="awilo_fn_abs_img">
-        <video muted playsinline>
+        <video autoplay muted loop playsinline preload="auto">
           <source src="./img/portfolio/3.mp4" type="video/mp4">
         </video>
       </div>
@@ -826,6 +826,7 @@ videos.forEach(video => {
 </body>
 
 </html>
+
 
 
 
