--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 				<!-- Shortcode: Title with Description -->
 				<div class="awilo_fn_title">
 					<h5>Portfolio / Projects</h5>
-					<h3>Some projects i've made.</h3>
+					<h3>What I’ve Been Working On.</h3>
 				</div>
 				<!-- /Shortcode: Title with Description -->
 				
@@ -837,6 +837,7 @@ videos.forEach(video => {
 </body>
 
 </html>
+
 
 
 
