--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
 												</div>
 											</div>
 											<div class="r_desc">
-												<p>Mark does excellent work and pays attention to the details that matter. He solves problems effectively, keeps a professional attitude, and adapts quickly when needed. His work consistently meets and often exceeds expectations</p>
+												<p>Mark Rosales had a strong dedication and work ethic while Masking for Renoworks. Mark consistently demonstrated exceptional attention to detail, ensuring that every project he worked on was completed with high standards and accuracy. He managed his time effectively, only committing to projects he could complete within the required deadlines while without compromising quality. Mark is open to learning, growth, he takes coachable opportunities well, and he would implement what has been discussed for future projects. He was a pleasure to work with over the years.</p>
 											</div>
 											<div class="r_reviewer">
 												<div class="abs_img" data-bg-img="./img/clients/4.jpg"></div>
@@ -868,6 +868,7 @@ window.addEventListener("load", function () {
 </body>
 
 </html>
+
 
 
 
